<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/portraitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/portrait" />

    <Button
        android:id="@+id/landscapeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/landscape" />

    <Button
        android:id="@+id/sensorButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sensor" />

    <!--Д/з: новые кнопки для ориентаций  -->
    <Button
        android:id="@+id/reverseLandscapeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reverse_landscape" />

    <Button
        android:id="@+id/reversePortraitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reverse_portrait" />

    <Button
        android:id="@+id/userPortraitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_portrait" />

    <Button
        android:id="@+id/unspecifiedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/unspecified" />

    <Button
        android:id="@+id/sensorPortraitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sensor_portrait" />

    <Button
        android:id="@+id/sensorLandscapeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sensor_landscape" />

    <Button
        android:id="@+id/fullSensorButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/full_sensor" />

    <Button
        android:id="@+id/fullUserButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/full_user" />

    <Button
        android:id="@+id/lockedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/locked" />

</LinearLayout>